--- a/help.html
+++ b/help.html
@@ -83,49 +83,50 @@
 
     <div class="buttons">
       <!-- Replace these href with your Google Drive public folder links -->
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE141</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE141.L</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">MAT116</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE241</a>
-       <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE241.L</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">ENG102</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">MAT120</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE111</a>
-       <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE111.L</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">MAT125</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">ENG103</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE211</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">MAT130</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">CHE101</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">CSE115</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">CSE115.L</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">BEN205</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE154</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE311</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE311.L</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">HIS102</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">HIS103</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE312</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE312.L</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/14eyiSi4ivBH11t0o5tPhvxdXmJdKBlPp?usp=sharing" target="_blank" rel="noopener noreferrer">EEE141</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/14eyiSi4ivBH11t0o5tPhvxdXmJdKBlPp?usp=sharing" target="_blank" rel="noopener noreferrer">EEE141.L</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/14eyiSi4ivBH11t0o5tPhvxdXmJdKBlPp?usp=sharing" target="_blank" rel="noopener noreferrer">MAT116</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/10yMZtpT0KvqSm0mTL2Ta-FKg0aoUZx0a?usp=sharing" target="_blank" rel="noopener noreferrer">EEE241</a>
+       <a class="course-button" href="https://drive.google.com/drive/folders/1F9cTLHjtTHss9vmhkPfjphz79PCYz7LO?usp=sharing" target="_blank" rel="noopener noreferrer">EEE241.L</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1xB3WgXEjWMbJ68b4-6WDLhSvGmNv3yp5?usp=sharing" target="_blank" rel="noopener noreferrer">ENG102</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/14eyiSi4ivBH11t0o5tPhvxdXmJdKBlPp?usp=sharing" target="_blank" rel="noopener noreferrer">MAT120</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/14eyiSi4ivBH11t0o5tPhvxdXmJdKBlPp?usp=sharing" target="_blank" rel="noopener noreferrer">EEE111</a>
+       <a class="course-button" href="https://drive.google.com/drive/folders/14eyiSi4ivBH11t0o5tPhvxdXmJdKBlPp?usp=sharing" target="_blank" rel="noopener noreferrer">EEE111.L</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1Rp9M7S2WKiBDXQlFKpICl5Ve-OQBJwok?usp=sharing" target="_blank" rel="noopener noreferrer">MAT125</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1hsYSAqhzrG26LHibAit1d7OXC_gPCwlN?usp=sharing" target="_blank" rel="noopener noreferrer">ENG103</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1zlgkdvXNg11VII1MXdhmqAVuAr7LvrXD?usp=sharing" target="_blank" rel="noopener noreferrer">EEE211</a>
+     <a class="course-button" href="https://drive.google.com/drive/folders/19KuyfprIa-QhmyZtHqc8Zh7Il755OuOJ?usp=sharing" target="_blank" rel="noopener noreferrer">EEE211.L</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/14a6e1CTTx9XMYh0TvcFDJ7LaCUfZOLbo?usp=sharing" target="_blank" rel="noopener noreferrer">MAT130</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/14eyiSi4ivBH11t0o5tPhvxdXmJdKBlPp?usp=sharing" target="_blank" rel="noopener noreferrer">CHE101</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/13ZGGmI2c9fD_PrSaYqoyZSfhAOc1Ffkf?usp=sharing" target="_blank" rel="noopener noreferrer">CSE115</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1_d5VEn32sGaqVn2lmsa6dF7BuPi4Tqlq?usp=sharing" target="_blank" rel="noopener noreferrer">CSE115.L</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1umdd62DQ3rHgLbSQZRuedo6bHX23hC2d?usp=sharing" target="_blank" rel="noopener noreferrer">BEN205</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1uQvHNujnYzIRXgexa2mgwDT_I1JJXgG8?usp=sharing" target="_blank" rel="noopener noreferrer">EEE154</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1iBsrC9OgY1sFgzTFE9mJwOzGur626tgc?usp=sharing" target="_blank" rel="noopener noreferrer">EEE311</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1_DDAzLjETPs0PzgJVSGjHOOr5tcKTg_t?usp=sharing" target="_blank" rel="noopener noreferrer">EEE311.L</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1F9ORJ8EJCqHmGUwjtdzHLAFhbU5Ku55R?usp=sharing" target="_blank" rel="noopener noreferrer">HIS102</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1GO91Wx3uZMphjfz-MwlF7ai2xw43hAOO?usp=sharing" target="_blank" rel="noopener noreferrer">HIS103</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1FMk2AnC0kmTG7_gy97WwE2Umnq3iv5Nk?usp=sharing" target="_blank" rel="noopener noreferrer">EEE312</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/16Z9I_iN0AEWn4W8l6gM07NRTZvi_t9rw?usp=sharing" target="_blank" rel="noopener noreferrer">EEE312.L</a>
 
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">MAT250</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">PHY107</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">PHY107.L</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">PHI104</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE362</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE362.L</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">MAT363</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">PHY108</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">PHY108.L</a>
-
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">POL101</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE363</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE363.L</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE411</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">EEE411.L</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">MAT350</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">SOC101</a>
-      <a class="course-button" href=" " target="_blank" rel="noopener noreferrer">CHE101.L</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1aoocfJzUl-YWws3MzQ-TXD45nN2MWaEw?usp=sharing" target="_blank" rel="noopener noreferrer">MAT250</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1OpkVdQOqW24HWn0fYGgCu639QfYupgnf?usp=sharing" target="_blank" rel="noopener noreferrer">PHY107</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1hT9baFlHsmIknCAX0crLYlPyv3LUg9NE?usp=sharing" target="_blank" rel="noopener noreferrer">PHY107.L</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1p507UxZoRzwYrtu9cZxHqelh3P1Aeeck?usp=sharing" target="_blank" rel="noopener noreferrer">PHI104</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/18wVy73lngOVjDO2kQqfpHQdGmHbsxutE?usp=sharing" target="_blank" rel="noopener noreferrer">EEE362</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1YaJgW2uvdudPVmbU5lCdqQh4MMW-rE9n?usp=sharing" target="_blank" rel="noopener noreferrer">EEE362.L</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1KeSg2wXz-rDP0SZZ3l7o-ajXzwoxdIFs?usp=sharing" target="_blank" rel="noopener noreferrer">MAT361</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1JgtHQBW5y9WLJikVYStLNx-fsBt8Wa2E?usp=sharing" target="_blank" rel="noopener noreferrer">PHY108</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1QNbYGX8yn9yxuJaOhQpAsZgZXfW0zV1Y?usp=sharing" target="_blank" rel="noopener noreferrer">PHY108.L</a>
+     <a class="course-button" href="https://drive.google.com/drive/folders/1ZTkWxcvI7XwcIr6KFl6ACLvmRQ518Byu?usp=sharing" target="_blank" rel="noopener noreferrer">EEE299</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1kQeg0NB7dO7JxvTqTPdXigHI6MVdbpTR?usp=sharing" target="_blank" rel="noopener noreferrer">POL101</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1pA1HK4CgsfiPWty3wnud7V45BAb5YIUA?usp=sharing" target="_blank" rel="noopener noreferrer">EEE363</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1lIjEI7QHzbpXk5IFAAyWCKcQj40Z4auh?usp=sharing" target="_blank" rel="noopener noreferrer">EEE363.L</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1GMJrHg-HhKvZLXy44nbvc3ZxtlUMcbRK?usp=sharing" target="_blank" rel="noopener noreferrer">EEE411</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1v8nAuGnhrxxwZvRjEzaqjFPbGMnpWmDn?usp=sharing" target="_blank" rel="noopener noreferrer">EEE411.L</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/13TR7hrif2Zv12Jh1s_KCMFfj6IyLNSTZ?usp=sharing" target="_blank" rel="noopener noreferrer">MAT350</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/1f1UQem8Tv88jKpHyKIW7D9qFKTPccnBI?usp=sharing" target="_blank" rel="noopener noreferrer">SOC101</a>
+      <a class="course-button" href="https://drive.google.com/drive/folders/13D7ZdcZJ2Wd-oQ1YGPP9IxN5uXMCQHAd?usp=sharing" target="_blank" rel="noopener noreferrer">CHE101.L</a>
       
 
 
