--- a/cgpa store.html
+++ b/cgpa store.html
@@ -133,11 +133,13 @@
 </div>
 
 <!-- Firebase SDK and Firestore -->
+
+
+<!-- (Same Head and CSS as before) -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/11.7.3/firebase-app.js";
-  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.7.3/firebase-firestore.js";
+  import { getFirestore, collection, addDoc, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/11.7.3/firebase-firestore.js";
 
-  // Your Firebase config
   const firebaseConfig = {
     apiKey: "AIzaSyArB_hJeAhmbnnK2Rt4jMh7kZNd95oSx3I",
     authDomain: "nsu-grade-his.firebaseapp.com",
@@ -147,11 +149,56 @@
     messagingSenderId: "193145000154",
     appId: "1:193145000154:web:95e2fa4c785bbad26195e3"
   };
-  // Initialize Firebase
+
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
 
-  // Add row function
+  // Load Data from Firestore
+  async function loadData() {
+    const tbody = document.getElementById("grades-body");
+    tbody.innerHTML = ""; // clear previous
+    const q = query(collection(db, "grades"), orderBy("timestamp"));
+    const snapshot = await getDocs(q);
+
+    snapshot.forEach(doc => {
+      const data = doc.data();
+      const row = document.createElement("tr");
+
+      row.innerHTML = `
+        <td><input type="text" value="${data.courseName}" placeholder="Course Name"></td>
+        <td>
+          <select>
+            <option value="0" ${data.credits == 0 ? 'selected' : ''}>0</option>
+            <option value="1" ${data.credits == 1 ? 'selected' : ''}>1</option>
+            <option value="1.5" ${data.credits == 1.5 ? 'selected' : ''}>1.5</option>
+            <option value="3" ${data.credits == 3 ? 'selected' : ''}>3</option>
+          </select>
+        </td>
+        <td>
+          <select>
+            <option value="">Select</option>
+            <option value="4.0" ${data.grade == 4.0 ? 'selected' : ''}>A</option>
+            <option value="3.7" ${data.grade == 3.7 ? 'selected' : ''}>A-</option>
+            <option value="3.3" ${data.grade == 3.3 ? 'selected' : ''}>B+</option>
+            <option value="3.0" ${data.grade == 3.0 ? 'selected' : ''}>B</option>
+            <option value="2.7" ${data.grade == 2.7 ? 'selected' : ''}>B-</option>
+            <option value="2.3" ${data.grade == 2.3 ? 'selected' : ''}>C+</option>
+            <option value="2.0" ${data.grade == 2.0 ? 'selected' : ''}>C</option>
+            <option value="1.7" ${data.grade == 1.7 ? 'selected' : ''}>C-</option>
+            <option value="1.3" ${data.grade == 1.3 ? 'selected' : ''}>D+</option>
+            <option value="1.0" ${data.grade == 1.0 ? 'selected' : ''}>D</option>
+            <option value="0" ${data.grade == 0 ? 'selected' : ''}>F</option>
+          </select>
+        </td>
+      `;
+      tbody.appendChild(row);
+    });
+
+    // Trigger CGPA calculation
+    document.dispatchEvent(new Event("change"));
+  }
+
+  // Add new row manually
   window.addRow = function () {
     const tbody = document.getElementById("grades-body");
     const row = document.createElement("tr");
@@ -186,7 +233,7 @@
     tbody.appendChild(row);
   };
 
-  // CGPA Calculation
+  // CGPA calculation
   document.addEventListener('change', () => {
     const rows = document.querySelectorAll("#grades-body tr");
     let totalCredits = 0;
@@ -232,7 +279,12 @@
 
     alert("All data saved to Firebase!");
   };
+
+  // Load data on page load
+  window.addEventListener("DOMContentLoaded", loadData);
 </script>
+
+
 
 </body>
 </html>
